			       =================
				BOGOFILTER NEWS
			       =================
 
0.14.5.3 2003-08-29

* Fix parser errors that can cause:
  1. Incorrect processing of html comments.
  2. "fatal flex scanner internal error--end of buffer missed", 
     which kills bogofilter.

0.14.5.2 2003-08-20

* bogominitrain.pl - removed email 'cruft' and revised format
  of verbose output.

0.14.5.1 2003-08-19
 
* Fixed parameter type error in dbh_print_names() that causes
  segfault.
* Fixed parsing error that treated "^From " in encoded text as
  a message separator.
* Enhanced verbose output of bogominitrain.pl
* Fixed defect in bogominitrain.pl's norepetition mode.
* Documented '-T' option in man page.
* Revised format for '-T'.
 
0.14.5	2003-08-15

* Corrected parsing error (in html code) that caused
  bogofilter to miss message separators.
* Revised processing of From and empty lines so that parsing
  works correctly with both flex-2.5.4 and flex-2.5.31.
* Added '-T' as terse mode (with fixed formatting).
* Updated bogominitrain.pl to version 1.3.
* Revised FAQ.

0.14.4	2003-08-10
 
* Revised database API so that there are 3 distinct layers
  (program, datastore, and database) with a clean interface
  between them.
* Correct exitcodes in bogoutil by using EX_ERROR.
* Updated FAQ.
* Fixed token registration bug in 0.14.x versions.
* Fixed seg fault caused by database lock contention.
 
0.14.3	2003-08-05
 
* Fixed critical locking bug introduced into bogofilter 0.14.0 with
  the combined-wordlist code: when working with separate wordlists,
  bogofilter would lock only the first one opened, rather than all.
* Documentation updates.
* %g formatting is now supported by bogofilter's formatting functions.
* Merged trio 1.10 (http://ctrio.sourceforge.net/) to support
  compilation on ancient systems (Solaris 2.5) that do not have
  [v]snprintf functions.
  Trio is Copyright (C) 1998-2000 Bjorn Reese and Daniel Stenberg.
* Various documentation updates, including the FAQ.