@@ -8,6 +8,7 @@
   1. Incorrect processing of html comments.
   2. "fatal flex scanner internal error--end of buffer missed", 
      which kills bogofilter.
+* Fix defective printing in 'bogofilter -Q' output.
 
 0.14.5.2 2003-08-20
 
